# LUMIN

./: .gitignore  CMakeLists.txt  Makefile  README.md  env.sh  pyproject.toml  setup.py
cpu/include/: matrix.h  try.h
cpu/tests/: submit.sbatch
include/: lumin.hpp
include/lumin/: backend.hpp  cpu_backend.hpp  cuda_backend.hpp  factory.hpp  matrix.hpp  mpi_backend.hpp
python/: bindings.cpp
src/: factory.cpp  main.c  matrix.c  matrix.cpp  try.c
src/backends/: cuda_backend.cu  mpi_backend.cpp
tests/: CMakeLists.txt  test_cuda.cpp  test_matrix.cpp  test_openmp.cpp
